--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>9월 14일 좆같다!</title>
+	<title>당신의 목표 재산을 이루려면?</title>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 	<style type="text/css">
 		body {margin:0; padding: 0;}
